# belt

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
blueprints/: vanilla_mall.txt
src/: lib.rs  main.rs
src/analyze/: charts.rs  mod.rs  parser.rs
src/benchmark/: charts.rs  discovery.rs  mod.rs  parser.rs  runner.rs  uprof.rs
src/blueprint/: mod.rs  runner.rs
src/blueprintbenchmark/: mod.rs  runner.rs
src/core/: config.rs  control.lua  error.rs  factorio.rs  mod.rs  output.rs  platform.rs  settings.rs  utils.rs
src/core/output/: csv.rs  mod.rs  report.rs  uprof.rs
src/sanitize/: .settings.rs  mod.rs  parser.rs  runner.rs  settings.rs
src/util/: blueprint_string.rs  mod.rs
templates/: benchmark.md.hbs  results.md.hbs
tests/: cli.rs  config_prioritization.rs  sample_blueprint.txt  sample_tile_blueprint.txt
