[package]
name = "belt"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
handlebars = "5.1"
csv = "1.3"
regex = "1.10"
glob = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
indicatif = "0.17"
dirs = "5.0"
thiserror = "^2"
