[package]
name = "factorio-belt"
version = "1.7.0"
edition = "2024"
description = "A fast, cross-platform Factorio benchmarking tool"
license = "MIT"
repository = "https://github.com/florishafkenscheid/belt"
homepage = "https://github.com/florishafkenscheid/belt"
keywords = ["factorio", "benchmark", "gaming", "performance"]
categories = ["command-line-utilities", "games"]

[[bin]]
name = "belt"
path = "src/main.rs"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
handlebars = "^6"
csv = "1.3"
regex = "1.10"
glob = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
indicatif = "0.17"
dirs = "^6"
thiserror = "^2"
charming = { version = "0.6.0", features = ["ssr"] }
rand = "0.9.1"
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.20.0"
